--- a/templates/detials.html
+++ b/templates/detials.html
@@ -4,69 +4,68 @@
 
 
 <div class="row">
-<div class="col-md-4"></div>
+      <div class="col-md-4"></div>
 
-<div class="col-md-4">
-
-
-<br>
-<br>
-<h1>Patient Details</h1>
-<div class="card p-3">
-
-<table class="table table-dark">
-  <thead>
-  <tr>
-  <th scope="col">DETAILS</th>
-   </tr>
-<tr>
-     <th scope="col">{{data.srfid}}</th>
-</tr>
-<tr>
-
-      <th scope="col">{{data.bedtype}}</th>
-</tr>
-<tr>
-
-      <th scope="col">{{data.bedtype}}</th>
-</tr>
-<tr>
-
-      <th scope="col">{{data.hcode}}</th>
-</tr>
-
-<tr>
-      <th scope="col">{{data.spo2}}</th>
-</tr>
-      <th scope="col">{{data.pname}}</th>
-</tr>
-<tr>
-
-      <th scope="col">{{data.pphone}}</th>
-    </tr>
-
-     <tr> 
-      <th scope="col">{{data.paddress}}</th>
-</tr>
+      <div class="col-md-4">
 
 
- 
+            <br>
+            <br>
+            <h1>Patient Details</h1>
+            <div class="card p-3">
 
+                  <table class="table table-light">
+                        <thead>
+                              <!-- <tr>
+                                    <th scope="col">DETAILS</th>
+                              </tr> -->
+                              <tr>
+                                    <th scope="col">SIRF ID: {{data.srfid}}</th>
+                              </tr>
+                              <tr>
 
-  </thead>
+                                    <th scope="col">BED TYPE: {{data.bedtype}}</th>
+                              </tr>
+                              <!-- <tr>
 
+                                    <th scope="col">{{data.bedtype}}</th>
+                              </tr> -->
+                              <tr>
 
-      
-   
-    
+                                    <th scope="col">HOSPITAL CODE: {{data.hcode}}</th>
+                              </tr>
+
+                              <tr>
+                                    <th scope="col">OXYGEN LEVEL: {{data.spo2}}</th>
+                              </tr>
+                              <th scope="col">PATIENT NAME: {{data.pname}}</th>
+                              </tr>
+                              <tr>
+
+                                    <th scope="col">PATIENT PHONE NUMBER: {{data.pphone}}</th>
+                              </tr>
+
+                              <tr>
+                                    <th scope="col">PATIENT ADDRESS: {{data.paddress}}</th>
+                              </tr>
 
 
 
 
-</div>
-</div>
-<div class="col-md-4"></div>
+
+                        </thead>
+                  </table>
+
+
+
+
+
+
+
+
+            </div>
+      </div>
+      <div class="col-md-4"></div>
 
 </div>
 {% endblock form %}
-
