--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,7 +14,9 @@
   <link href="static/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="static/assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
@@ -28,8 +30,10 @@
 
   <!-- Template Main CSS File -->
   <link href="static/assets/css/style.css" rel="stylesheet">
-  
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 
@@ -42,7 +46,7 @@
         <i class="bi bi-clock"></i> 24*7 Available
       </div>
       <div class="d-flex align-items-center">
-        <i class="bi bi-phone"></i> Call us now +919986786453
+        <i class="bi bi-phone"></i> Call us now +91 8797 21 9600
       </div>
     </div>
   </div>
@@ -62,44 +66,47 @@
           <li><a class="nav-link scrollto" href="/pdetails">Patients Details</a></li>
           <li><a class="nav-link scrollto" href="/slotbooking">Available Beds</a></li>
 
-{% if current_user.is_authenticated  and current_user.hcode %}
+          {% if current_user.is_authenticated and current_user.hcode %}
 
-          <li class="dropdown"><a href="/login"><span>Welcome {{current_user.email}}</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="/login"><span>Welcome {{current_user.email}}</span> <i
+                class="bi bi-chevron-down"></i></a>
             <ul>
 
               <li><a href="/addhospitalinfo">Add Hospital Data</a></li>
               <li><a href="/logout">Logout</a></li>
-      
-           
+
+
             </ul>
           </li>
-{% elif current_user.is_authenticated and current_user.srfid %}
-           <li class="dropdown"><a href="/login"><span>Welcome {{current_user.email}}</span> <i class="bi bi-chevron-down"></i></a>
+          {% elif current_user.is_authenticated and current_user.srfid %}
+          <li class="dropdown"><a href="/login"><span>Welcome {{current_user.email}}</span> <i
+                class="bi bi-chevron-down"></i></a>
             <ul>
 
               <li><a href="/slotbooking">Book Slot</a></li>
               <li><a href="/logout">Logout</a></li>
-      
-           
+
+
             </ul>
           </li>
-{% else %}
+          {% else %}
           <li class="dropdown"><a href="/login"><span>Sign In</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="/login">User Login</a></li>
               <li><a href="/hospitallogin">Hospital Login</a></li>
               <li><a href="/admin">Admin Login</a></li>
-           
+
             </ul>
           </li>
 
-{% endif %}
+          {% endif %}
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="/slotbooking" class="appointment-btn scrollto"><span class="d-none d-md-inline">Bed Booking Slot</span> Book Now</a>
+      <a href="/slotbooking" class="appointment-btn scrollto"><span class="d-none d-md-inline">Bed Booking Slot</span>
+        Book Now</a>
 
     </div>
   </header><!-- End Header -->
@@ -108,14 +115,15 @@
 
 
   {% block body %}
-  
-  
+
+
   {% endblock body %}
 
 
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="static/assets/vendor/purecounter/purecounter.js"></script>
