--- a/templates/hospitaldata.html
+++ b/templates/hospitaldata.html
@@ -75,7 +75,7 @@ Add Hospital Information
                             class="img-fluid rounded-start" alt="...">
                     </div>
                     <div class="col-md-8">
-                        <div class="card-body bg-dark">
+                        <div class="card-body bg-light">
                             <h5 class="card-title text-center bg-light">Hospital Data</h5>
                             <div class="card bg-dark" style="width: 28rem;">
                                 <ul class="list-group list-group-flush bg-dark">
@@ -91,7 +91,7 @@ Add Hospital Information
                                     <li class="list-group-item"><a href="/hedit/{{postsdata.id}}"><i
                                                 class="fas fa-edit"></i></a> </i>
 
-                                        <a class="ml-4" confirm('Are you sure to Delete data')
+                                        <a class="ml-4" confirm(Are you sure to Delete data)
                                             href="/hdelete/{{postsdata.id}}"><i class="fas fa-trash-alt"></i></a>
                                     </li>
 
