--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -105,7 +105,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="/slotbooking" class="appointment-btn scrollto"><span class="d-none d-md-inline">Bed Booking Slot</span>
+      <a href="/slotbooking" class="appointment-btn scrollto"><span class="d-none d-md-inline"></span>
         Book Now</a>
 
     </div>
