--- a/templates/hospitaldata.html
+++ b/templates/hospitaldata.html
@@ -24,8 +24,8 @@ Add Hospital Information
                     <form action="/addhospitalinfo" method="post">
 
                         <div class="form-group">
-                            <input type="text" class="form-control mt-2" name="hcode"
-                                placeholder="Enter the Hospital Code" required>
+                            <input type="text" class="form-control mt-2" name="hcode" value="{{current_user.hcode}}"
+                                required>
                         </div>
 
                         <div class="form-group">
@@ -83,13 +83,13 @@ Add Hospital Information
                                     <li class="list-group-item">Hospital Name : <b>{{postsdata.hname}}</b></li>
                                     <li class="list-group-item">Normal Beds Available :<b>{{postsdata.normalbed}}</b>
                                     </li>
-                                    <li class="list-group-item">H.I.C.U Beds Available: <b>{{postsdata.hicubed}}</b>
+                                    <li class="list-group-item">H.I.C.U Beds Available : <b>{{postsdata.hicubed}}</b>
                                     </li>
                                     <li class="list-group-item">I.C.U Beds Available :<b>{{postsdata.icubed}}</b> </li>
                                     <li class="list-group-item">Ventilators Beds Available : <b>{{postsdata.vbed}}</b>
                                     </li>
-                                    <li class="list-group-item"><a href="/hedit/{{postsdata.id}}"><i
-                                                class="fas fa-edit"></i></a> </i>
+                                    <li class="list-group-item">
+                                        <a href="/hedit/{{postsdata.id}}"><i class="fas fa-edit"></i></a> </i>
 
                                         <a class="ml-4" confirm(Are you sure to Delete data)
                                             href="/hdelete/{{postsdata.id}}"><i class="fas fa-trash-alt"></i></a>
