--- a/templates/base.html
+++ b/templates/base.html
@@ -120,7 +120,7 @@
         <!-- Slide 1 -->
         <div class="carousel-item active" style="background-image: url(static/assets/img/slide/slide-1.jpg)">
           <div class="container">
-            <h2>Welcome to <span>Bangalore Covid Center</span></h2>
+            <h2>Welcome to <br><span>Bangalore Covid Bed Slot System</span></h2>
             <p>We are here to help you with your health</p>
 
             <a href="#about" class="btn-get-started scrollto">Read More</a>
@@ -263,7 +263,7 @@
               <div class="error-message"></div>
               <div class="sent-message">Your message has been sent. Thank you!</div>
             </div>
-            <div class="text-center"><button type="submit">This Feature will be available soon.</button></div>
+            <!-- <div class="text-center"><button>This Feature will be available soon.</button></div> -->
           </form>
         </div>
 
@@ -287,7 +287,7 @@
 
       <div class="container">
         <div class="copyright">
-          &copy; Copyright <strong><span>H & M</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>Huzaifa & Meghana</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
           Designed by <a href="https://github.com/HuzaifaAnjumJamil">HUZAIFA ANJUM JAMIL</a>
