--- a/templates/baselogin.html
+++ b/templates/baselogin.html
@@ -89,7 +89,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="#appointment" class="appointment-btn scrollto"><span class="d-none d-md-inline">Bed Booking
+      <a href="#appointment" class="appointment-btn scrollto"><span class="d-none d-md-inline">Book
           Slot</span></a>
 
     </div>
