--- a/templates/detials.html
+++ b/templates/detials.html
@@ -1,4 +1,4 @@
-{% extends 'baselogin.html' %}
+{% extends 'baselogin1.html' %}
 {% block title %} Patient details{% endblock title %}
 {% block form %}
 
