--- a/templates/base.html
+++ b/templates/base.html
@@ -287,7 +287,7 @@
 
       <div class="container">
         <div class="copyright">
-          &copy; Copyright <strong><span>Huzaifa & Meghana</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>Huzaifa & Meghna</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
           Designed by <a href="https://github.com/HuzaifaAnjumJamil">HUZAIFA ANJUM JAMIL</a>
